# new_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ui.html
infrastructure/cdk/: app.py  cdk.json
infrastructure/cdk/stacks/: __init__.py  voicebot_stack.py
scripts/: healthcheck.sh  start.sh
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  handoff.py  voice.py
src/config/: settings.py
src/core/: __init__.py
src/core/asr/: __init__.py  transcriber.py
src/core/decision/: __init__.py  handoff_detector.py
src/core/handoff/: __init__.py  handoff_manager.py  summary_generator.py
src/core/nlu/: __init__.py  entity_extractor.py  intent_classifier.py  pipeline.py  sentiment_analyzer.py
src/core/orchestrator/: __init__.py  dialogue_manager.py
src/core/tts/: __init__.py  synthesizer.py
src/models/: __init__.py  conversation.py  handoff.py
src/services/bedrock/: __init__.py  llm_service.py
src/services/crm/: __init__.py  client.py
src/services/groq/: __init__.py  llm_service.py
src/services/indic_asr/: __init__.py  transcriber.py
src/services/local_tts/: __init__.py  synthesizer.py
src/services/station/: __init__.py  locator.py
src/utils/: __init__.py  logging.py
