[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-smart-voicebot"
version = "1.0.0"
description = "Multilingual Voicebot for Battery Smart Driver Queries with Warm Handoff"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Battery Smart Engineering", email = "engineering@batterysmart.com"}
]
keywords = ["voicebot", "multilingual", "asr", "tts", "nlu", "conversational-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "webrtcvad>=2.0.10",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "langdetect>=1.0.9",
    "indic-transliteration>=2.3.0",
    # Groq LLM integration
    "groq>=0.4.0",
    # Local TTS (Google TTS)
    "gTTS>=2.5.0",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
]
ml = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "sentencepiece>=0.1.99",
    "faster-whisper>=0.10.0",
    # ONNX for optimized inference
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[project.scripts]
voicebot = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
